<resources>
    <string name="app_name">Super Clean</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logo_view_dec">logo_image_view</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="login_hint">Login</string>
    <string name="login_to_rgister_activity">New? create an account</string>
    <string name="reg_name_hint">Name</string>
    <string name="reg_email_hint">Email</string>
    <string name="reg_password_hint">Password</string>
    <string name="sign_up_button">SING UP</string>
    <string name="sign_in_button">LOG IN</string>
    <string name="reg_to_log_message">I have an account</string>
    <string name="log_reg_header">blue_logo_transparent</string>
    <string name="sign_up_title">SIGN UP</string>
    <string name="sign_in_title">LOG IN</string>
    <string name="title_activity_client">ClientActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>